--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "nodemon index",
-    "start": "node index"
+    "start": "node index.js"
   },
   "author": "Mudit Dubey",
   "license": "ISC",
